@@ -4,8 +4,8 @@
  * LEIDEN OPEN VARIATION DATABASE (LOVD)
  *
  * Created     : 2011-02-16
- * Modified    : 2012-01-18
- * For LOVD    : 3.0-beta-01
+ * Modified    : 2012-02-02
+ * For LOVD    : 3.0-beta-02
  *
  * Copyright   : 2004-2012 Leiden University Medical Center; http://www.LUMC.nl/
  * Programmers : Ing. Ivar C. Lugtenburg <I.C.Lugtenburg@LUMC.nl>
@@ -247,7 +247,7 @@ class LOVD_Individual extends LOVD_Custom {
     function getForm ()
     {
         // Build the form.
-        global $_AUTH, $_SETT;
+        global $_AUTH, $_DB, $_SETT;
 
         // Get list of diseases
         $aDiseasesForm = array();
@@ -265,13 +265,10 @@ class LOVD_Individual extends LOVD_Custom {
         $aSelectOwner = array();
 
         if ($_AUTH['level'] >= LEVEL_CURATOR) {
-            $q = lovd_queryDB_Old('SELECT id, name FROM ' . TABLE_USERS . ' ORDER BY name');
-            while ($z = mysql_fetch_assoc($q)) {
-                $aSelectOwner[$z['id']] = $z['name'];
-            }
+            $aSelectOwner = $_DB->query('SELECT id, name FROM ' . TABLE_USERS . ' WHERE id > 0 ORDER BY name')->fetchAllCombine();
+            $aFormOwner = array('Owner of this individual', '', 'select', 'owned_by', 1, $aSelectOwner, false, false, false);
             $aSelectStatus = $_SETT['data_status'];
             unset($aSelectStatus[STATUS_PENDING], $aSelectStatus[STATUS_IN_PROGRESS]);
-            $aFormOwner = array('Owner of this individual', '', 'select', 'owned_by', 1, $aSelectOwner, false, false, false);
             $aFormStatus = array('Status of this data', '', 'select', 'statusid', 1, $aSelectStatus, false, false, false);
         } else {
             $aFormOwner = array();
