@@ -21,6 +21,16 @@
  * When resorting a ViewList, the list will return to the first page.
  * When there is only one user in the database, after creating a gene you are no
    longer forwarded to the "Add curator" page.
+ * Fixed display problem with the disease entry form when there are genes with long names.
+ * Fixed bug; Searching for !="" still showed entries with empty values in the specified column.
+ * Fixed bug; Searching for values in custom columns used the slower HAVING SQL syntax instead of the optimized WHERE syntax.
+ * When searching for negative matches (e.g. "!DMD" which means "does not match DMD"), the NULL values were ignored and not returned.
+ * Fixed bug; The progress bar shown while upgrading did not calculate the total work correctly, making a weird "jump" at the end.
+
+
+
+
+
 
 
 
